=== gtksourceview 2.5.6 ===

2009-03-02  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.6

2009-02-26  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gtksourceview/language-specs/po.lang: added
	text/x-gettext-translation-template mime type

2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* tests/test-widget.c: Replace deprecated gtk symbol. Bug #572085

2009-02-25  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcemark.c: chain up finalize.

=== gtksourceview 2.5.5 ===

2009-02-15  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.5

2009-02-10  Johannes Schmid  <jhs@gnome.org>

	* gtksourceview/gtksourceview.c (update_current_line_color):
	#570492 – Canot open editor - crash

2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	Mark strings for translation.

2009-02-04  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	* gtksourceview/language-specs/Makefile.am:
	Add new blue based style. Thanks to Will Farrington.

=== gtksourceview 2.5.4 ===

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.4

2009-02-02  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: support matlab
	multiline comments. Patch by Brendan Bycroft.
	(Fixes bug #556365).

2009-01-30  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/rpmspec.lang:
	Add %else to rpm spec language. Patch by Matthias Clasen.
	(Fixes bug #569771).

=== gtksourceview 2.5.3 ===

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.3

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/php.lang: add
	missing "endif" keyword.

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>
