@@ -67,6 +67,7 @@ gtksourceview/language-specs/perl.lang
 gtksourceview/language-specs/php.lang
 gtksourceview/language-specs/pkgconfig.lang
 gtksourceview/language-specs/po.lang
+gtksourceview/language-specs/prolog.lang
 gtksourceview/language-specs/python.lang
 gtksourceview/language-specs/R.lang
 gtksourceview/language-specs/rpmspec.lang
