@@ -1,3 +1,7 @@
+2009-03-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* POTFILES.in: Updated.
+
 2009-03-03  Wadim Dziedzic  <wdziedzic@aviary.pl>
 
 	* pl.po: Updated Polish translation
