@@ -1,3 +1,10 @@
+2009-03-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/language-specs/prolog.lang:
+	* gtksourceview/language-specs/Makefile.am:
+	* gtksourceview/language-specs/testfiles.sh:
+	Add prolog lang file.
+
 === gtksourceview 2.5.6 ===
 
 2009-03-02  Paolo Borelli  <paolo.borelli@katamail.com>
